# water

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README  button.c  client.c  configure  configure.ac  dragger.c  ewmh.c  frame.c  lib.c  main.c  mwm.c  root.c  water.1  water.h  x11font.c  xftfont.c
